--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container py-5">
         <div class="card mx-auto" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="assets/img/sass.jpg" class="card-img-top p-3" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Título de la tarjeta</h5>
+              <h5 class="card-title text-purple">Título de la tarjeta</h5>
               <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-              <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+              <a href="#" class="btn bg-purple">Ir a algún lugar</a>
             </div>
         </div>
     </div>
